CAF-3156: Add classificationTarget property to classifications which … (#1)
* CAF-3156: Add classificationTarget property to classifications which controls the scope for condition evaluation e.g. root document only, root doc and children etc.

* CAF-3156: Update release notes with classificationTarget info.

* CAF-3156: Release note formatting fix.

* CAF-3156: Missed update to expected JSON property when switching name from classification_target to classificationTarget.
